[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/GUI_Equiped_item.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Collectibles_nobg_16x16.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Weapon_Icons_nobg_16x16.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/UI/MaxStats.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Upgrade.gd" type="Script" id=7]
[ext_resource path="res://Assets/UI/Game_UI_Controller.gd" type="Script" id=8]
[ext_resource path="res://Assets/UI/Player_Stats_Controller.gd" type="Script" id=9]
[ext_resource path="res://Assets/sounds/Sound Panel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/UI/update_theme.tres" type="Theme" id=11]
[ext_resource path="res://Assets/UI/Inventory.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Inventory/Weapon_Slot.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/UI/1-bit_theme.tres" type="Theme" id=14]
[ext_resource path="res://Assets/UI/Relics_UI.gd" type="Script" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.678431, 0.678431, 0.678431, 1 )
corner_detail = 1

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 177.0 ],
"_edit_vertical_guides_": [ -50.0 ]
}

[node name="Game_UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 8 )

[node name="Items" type="Panel" parent="Game_UI"]
anchor_top = 0.835
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0499878
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 1 )

[node name="item1" type="Sprite" parent="Game_UI/Items"]
position = Vector2( 28.75, 27.75 )
scale = Vector2( 1.375, 1.375 )
texture = ExtResource( 1 )
offset = Vector2( -10, -10 )
hframes = 2
frame = 1

[node name="weapon" type="Sprite" parent="Game_UI/Items/item1"]
position = Vector2( -10, -9.99999 )
z_as_relative = false
texture = ExtResource( 4 )
hframes = 6
vframes = 3
frame = 3

[node name="item1Text" type="Label" parent="Game_UI/Items/item1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -28.0
margin_right = -16.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 13, 10 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Z"

[node name="item2" type="Sprite" parent="Game_UI/Items"]
position = Vector2( 54.875, 27.75 )
scale = Vector2( 1.4375, 1.375 )
texture = ExtResource( 1 )
offset = Vector2( -10, -10 )
hframes = 2
frame = 1

[node name="weapon" type="Sprite" parent="Game_UI/Items/item2"]
position = Vector2( -10, -10 )
scale = Vector2( 1, 1 )
z_as_relative = false
texture = ExtResource( 4 )
hframes = 6
vframes = 3
frame = 4

[node name="item2Text" type="Label" parent="Game_UI/Items/item2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -28.0
margin_right = -16.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 13, 10 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "X"

[node name="Stats" type="Panel" parent="Game_UI/Items"]
margin_left = 161.0
margin_top = 2.0
margin_right = 221.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( -65, -2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="Game_UI/Items/Stats"]
margin_right = 43.0
margin_bottom = 12.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HP 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP" type="Label" parent="Game_UI/Items/Stats"]
margin_top = 13.0
margin_right = 27.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AP" type="Label" parent="Game_UI/Items/Stats"]
margin_left = 32.0
margin_top = 13.0
margin_right = 59.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "AP"

[node name="key" type="Node2D" parent="Game_UI/Items/Stats"]
position = Vector2( 40, 6 )

[node name="key_sprite" type="Sprite" parent="Game_UI/Items/Stats/key"]
texture = ExtResource( 3 )
hframes = 6
vframes = 2
frame = 2

[node name="key_label" type="Label" parent="Game_UI/Items/Stats/key"]
margin_left = 5.0
margin_top = -6.0
margin_right = 18.0
margin_bottom = 6.0
text = "0"

[node name="Weapons" type="Panel" parent="Game_UI/Items"]
margin_left = 54.0
margin_top = 2.0
margin_right = 154.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( -65, -2 )

[node name="Inventory_List" type="Control" parent="Game_UI/Items/Weapons"]
margin_right = 88.0
margin_bottom = 24.0

[node name="Weapons_Center_Container" type="CenterContainer" parent="Game_UI/Items/Weapons/Inventory_List"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -12.0
margin_right = 52.0
margin_bottom = 12.0

[node name="Weapons_List" type="HBoxContainer" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container"]
margin_top = 2.0
margin_right = 92.0
margin_bottom = 22.0
alignment = 1

[node name="Weapon_Slot" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]

[node name="Weapon_Slot2" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]
margin_left = 24.0
margin_right = 44.0

[node name="Weapon_Slot3" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]
margin_left = 48.0
margin_right = 68.0

[node name="Weapon_Slot4" parent="Game_UI/Items/Weapons/Inventory_List/Weapons_Center_Container/Weapons_List" instance=ExtResource( 13 )]
margin_left = 72.0
margin_right = 92.0

[node name="Stats" type="Panel" parent="Game_UI"]
anchor_top = 0.735
anchor_right = 0.996
anchor_bottom = 0.829
margin_left = 131.0
margin_top = 2.04999
margin_right = 0.895996
margin_bottom = 2.06999
theme = ExtResource( 5 )

[node name="Level" type="Label" parent="Game_UI/Stats"]
margin_left = 2.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level 1"

[node name="xp" type="Label" parent="Game_UI/Stats"]
anchor_right = 1.0
anchor_bottom = 0.875
margin_left = 34.0
margin_top = 2.0
margin_right = -14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "XP: 0/100"

[node name="Upgrade_Label" type="Panel" parent="Game_UI"]
visible = false
margin_top = 128.0
margin_right = 41.0
margin_bottom = 143.0
script = ExtResource( 7 )

[node name="Label" type="Label" parent="Game_UI/Upgrade_Label"]
visible = false
margin_left = 3.0
margin_top = 1.0
margin_right = 39.0
margin_bottom = 13.0
theme = ExtResource( 11 )
text = "Upgrade"
__meta__ = {
"_edit_lock_": true
}

[node name="Title_Scene" type="Control" parent="."]
visible = false
margin_right = 64.0
margin_bottom = 17.0
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Title_Scene"]
one_shot = true
autostart = true

[node name="Title_Panel" type="Panel" parent="Title_Scene"]
anchor_right = 1.525
anchor_bottom = 1.125
margin_top = 1.0
margin_right = -34.6
margin_bottom = 0.875

[node name="Title_Text" type="Label" parent="Title_Scene/Title_Panel"]
anchor_right = 1.0
anchor_bottom = 0.941
margin_left = 4.0
margin_right = -5.0
margin_bottom = 0.00299931
text = "Scene name"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Introdution_Buttons" type="Control" parent="."]
visible = false
anchor_top = 0.835
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.04999
margin_right = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Pause_Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="ColorRect" parent="Pause_Options"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Pause_Button_Container" type="VBoxContainer" parent="Pause_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -46.0
margin_right = 46.0
margin_bottom = 46.0
focus_neighbour_top = NodePath("Quests")
focus_neighbour_bottom = NodePath("Settings")
focus_next = NodePath("Settings")
focus_mode = 2

[node name="Settings" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_right = 92.0
margin_bottom = 12.0
theme = ExtResource( 11 )
text = "Settings"

[node name="Player" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_top = 16.0
margin_right = 92.0
margin_bottom = 28.0
theme = ExtResource( 11 )
text = "Player Info"

[node name="Inventory" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_top = 32.0
margin_right = 92.0
margin_bottom = 44.0
theme = ExtResource( 11 )
text = "Inventory"

[node name="Relics" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 60.0
theme = ExtResource( 11 )
text = "Relics"

[node name="Quests" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_top = 64.0
margin_right = 92.0
margin_bottom = 76.0
theme = ExtResource( 11 )
text = "Quests"

[node name="Book" type="Button" parent="Pause_Options/Pause_Button_Container"]
margin_top = 80.0
margin_right = 92.0
margin_bottom = 92.0
theme = ExtResource( 11 )
text = "Book"

[node name="UI_Containers" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Player_Info" type="Control" parent="UI_Containers"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="UI_Containers/Player_Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Label" type="Label" parent="UI_Containers/Player_Info"]
margin_right = 51.0
margin_bottom = 12.0
text = "Player Info"

[node name="Max Stats" type="Panel" parent="UI_Containers/Player_Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -53.0
margin_right = 87.5
margin_bottom = -5.0
theme = ExtResource( 5 )
script = ExtResource( 6 )

[node name="MaxHp" type="Label" parent="UI_Containers/Player_Info/Max Stats"]
margin_left = 2.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Max HP: "

[node name="AttackPower" type="Label" parent="UI_Containers/Player_Info/Max Stats"]
margin_left = 2.0
margin_top = 12.0
margin_right = 45.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Attack Power: "

[node name="MaxAp" type="Label" parent="UI_Containers/Player_Info/Max Stats"]
margin_left = 2.0
margin_top = 22.0
margin_right = 83.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Max Action Points: "

[node name="MaxMp" type="Label" parent="UI_Containers/Player_Info/Max Stats"]
margin_left = 2.0
margin_top = 32.0
margin_right = 83.0
margin_bottom = 44.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Max Magic Points: "

[node name="Upgrades" type="Panel" parent="UI_Containers/Player_Info"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -74.0
script = ExtResource( 9 )

[node name="Title" type="Label" parent="UI_Containers/Player_Info/Upgrades"]
margin_left = 2.0
margin_right = 85.0
margin_bottom = 12.0
text = "Upgdades"

[node name="Points" type="Label" parent="UI_Containers/Player_Info/Upgrades"]
margin_left = 2.0
margin_top = 16.0
margin_right = 85.0
margin_bottom = 28.0
text = "Points:0"

[node name="Upgrade_Panel" type="VBoxContainer" parent="UI_Containers/Player_Info/Upgrades"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -30.0
margin_right = 103.0
margin_bottom = 30.0
focus_mode = 2

[node name="upgrade hp" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_right = 164.0
margin_bottom = 12.0
theme = ExtResource( 11 )
disabled = true
text = "Upgrade Hp"

[node name="upgrade atk" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_top = 16.0
margin_right = 164.0
margin_bottom = 28.0
theme = ExtResource( 11 )
text = "Upgrade Attack "

[node name="upgrade Magic" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_top = 32.0
margin_right = 164.0
margin_bottom = 44.0
theme = ExtResource( 11 )
text = "Upgrade Magic points"

[node name="upgrade action points" type="Button" parent="UI_Containers/Player_Info/Upgrades/Upgrade_Panel"]
margin_top = 48.0
margin_right = 164.0
margin_bottom = 60.0
theme = ExtResource( 11 )
text = "Upgrade Action Poins"

[node name="Settings" type="Control" parent="UI_Containers"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -85.0
margin_right = 112.0
margin_bottom = 85.0

[node name="background" type="ColorRect" parent="UI_Containers/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Sound Panel" parent="UI_Containers/Settings" instance=ExtResource( 10 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="UI_Containers/Settings"]
margin_right = 51.0
margin_bottom = 12.0
text = "Settings"

[node name="Control" type="Control" parent="UI_Containers/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="UI_Containers/Settings/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.0
margin_right = 26.0
margin_bottom = 4.0
text = "Language List"

[node name="Language_List" type="HBoxContainer" parent="UI_Containers/Settings/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -7.5
margin_right = 69.0
margin_bottom = 7.5

[node name="Button" type="Button" parent="UI_Containers/Settings/Control/Language_List"]
margin_right = 67.0
margin_bottom = 15.0
theme = ExtResource( 11 )
text = "SELECT_PT"

[node name="Button2" type="Button" parent="UI_Containers/Settings/Control/Language_List"]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 15.0
theme = ExtResource( 11 )
text = "SELECT_EN"

[node name="Inventory" parent="UI_Containers" instance=ExtResource( 12 )]
visible = false
margin_bottom = -28.0

[node name="Relics" type="Control" parent="UI_Containers"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )

[node name="Relics_List" type="VBoxContainer" parent="UI_Containers/Relics"]
anchor_left = 0.0401786
anchor_top = 0.0764706
anchor_right = 0.200893
anchor_bottom = 0.688235
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ring" type="Button" parent="UI_Containers/Relics/Relics_List"]
margin_right = 36.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 11 )
text = "?"
icon_align = 1

[node name="necklace" type="Button" parent="UI_Containers/Relics/Relics_List"]
show_behind_parent = true
margin_top = 36.0
margin_right = 36.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 11 )
text = "?"
icon_align = 1

[node name="Boots_Of_Speed" type="Button" parent="UI_Containers/Relics/Relics_List"]
margin_top = 72.0
margin_right = 36.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 11 )
text = "?"
icon_align = 1

[node name="Text_Label" type="RichTextLabel" parent="UI_Containers/Relics"]
anchor_left = 0.241071
anchor_top = 0.0764706
anchor_right = 0.928571
anchor_bottom = 0.694118
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="timeout" from="Title_Scene/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Player" to="." method="_on_Player_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Relics" to="." method="_on_Relics_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Quests" to="." method="_on_Quests_pressed"]
[connection signal="pressed" from="Pause_Options/Pause_Button_Container/Book" to="." method="_on_Book_pressed"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade hp" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_hp_pressed"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade atk" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_atk_pressed"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade Magic" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_Magic_pressed"]
[connection signal="pressed" from="UI_Containers/Player_Info/Upgrades/Upgrade_Panel/upgrade action points" to="UI_Containers/Player_Info/Upgrades" method="_on_upgrade_action_points_pressed"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/Ring" to="UI_Containers/Relics" method="_on_Ring_focus_entered"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/necklace" to="UI_Containers/Relics" method="_on_necklace_focus_entered"]
[connection signal="focus_entered" from="UI_Containers/Relics/Relics_List/Boots_Of_Speed" to="UI_Containers/Relics" method="_on_Boots_Of_Speed_focus_entered"]
